refactor: support RCDE namespace autoload
* refactor post-message api script to urlencode POST params

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,11 @@
         }
     ],
     "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {
+            "RCDE\\": "src/"
+        }
+    },
     "require": {
         "arrilot/dotenv-php": "^2.0",
         "phpmailer/phpmailer": "^6.3"
