fix(htaccess): set WEBP Content-Type

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -10,6 +10,10 @@ RewriteCond %{HTTPS} !on
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 </IfModule>
 
+<filesMatch "\.(webp)$">
+        Header set Content-Type: image/webp
+</filesMatch>
+
 <filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|webp|svg|swf|otf|woff2)$">
         Header set Cache-Control "max-age=63072000, public"
 </filesMatch>
