fix(htaccess): redirect 301 on unsecure HTTP connection

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -6,8 +6,8 @@ ErrorDocument 500 /errors/serverr.php
 
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteCond %{HTTPS} !on
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
 
 <filesMatch "\.(webp)$">
