--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "arrilot/dotenv-php": "^2.0",
         "ext-mbstring": "*",
         "ext-pdo": "*",
-        "php": "8.0",
+        "php": "^8.0",
         "phpmailer/phpmailer": "^6.3"
     }
 }
