fix(headers): serve HSTS header only over HTTPS

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -15,7 +15,7 @@ ErrorDocument 500 /errors/serverr.php
     Header set X-Content-Type-Options "nosniff"
     Header set X-Frame-Options        "SAMEORIGIN"
 
-    Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
+    Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" env=HTTPS
     Header        set Referrer-Policy           "strict-origin"
     Header        set Permissions-Policy        "fullscreen=(self)"
 
